css/adidas.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Covered+By+Your+Grace&family=Lobster&display=swap");
@keyframes flicker-base {
  0%, 18%, 22%, 25%, 53%, 57%, 100% {
    text-shadow: 0 0 4px #000, 0 0 10px #fff, 0 0 18px #0fa, 0 0 38px #0fa, 0 0 73px #0fa; }
  20%, 24%, 55% {
    text-shadow: 0 0 4px #000, 0 0 5px #fff, 0 0 9px #0fa, 0 0 19px #0fa, 0 0 36px #0fa; } }

@keyframes flicker-green {
  0%, 18%, 22%, 25%, 53%, 57%, 100% {
    text-shadow: 0 0 4px #000, 0 0 10px #fff, 0 0 18px #9bdc28, 0 0 38px #9bdc28, 0 0 73px #9bdc28; }
  20%, 24%, 55% {
    text-shadow: 0 0 4px #000, 0 0 5px #fff, 0 0 9px #9bdc28, 0 0 19px #9bdc28, 0 0 36px #9bdc28; } }

@keyframes flicker-red {
  0%, 18%, 22%, 25%, 53%, 57%, 100% {
    text-shadow: 0 0 4px #000, 0 0 18px #FA1E1E, 0 0 38px #FA1E1E, 0 0 73px #FA1E1E; }
  20%, 24%, 55% {
    text-shadow: 0 0 5px #000, 0 0 9px #FA1E1E, 0 0 19px #FA1E1E, 0 0 36px #FA1E1E; } }

@keyframes flicker-cyan {
  0%, 18%, 22%, 25%, 53%, 57%, 100% {
    text-shadow: 0 0 4px #000, 0 0 10px #fff, 0 0 18px #36F5F5, 0 0 38px #36F5F5, 0 0 73px #36F5F5; }
  20%, 24%, 55% {
    text-shadow: 0 0 4px #000, 0 0 5px #fff, 0 0 9px #36F5F5, 0 0 19px #36F5F5, 0 0 36px #36F5F5; } }

.black {
  background-color: #232325; }

.muted-lime {
  background-color: #CFC97C; }

.grey {
  background-color: grey; }

.pantone {
  background-color: #815765; }

.green-white {
  background-color: #DCDCD2; }

.toasted {
  background-color: #BFA579; }

.white {
  background-color: white; }

.blue {
  background-color: blue; }

.pink {
  background-color: pink; }

.dark-purple {
  background-color: #302041; }

.yellowgreen {
  background-color: #D5E171; }

.orangered {
  background-color: orangered; }

.green {
  background: #9bdc28; }

.red {
  background: #FA1E1E; }

.cyan {
  background: #36F5F5; }

* {
  margin: 0;
  box-sizing: border-box;
  font-family: 'Poppins'; }

.header {
  position: fixed;
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  width: 100%;
  height: 6rem;
  background-color: transparent;
  transition: 0.2s; }
  .header__container {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    width: 70%;
    height: 90%; }

.logos {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%; }
  .logos__home {
    height: auto; }
    .logos__home img {
      filter: drop-shadow(0 0 2px black);
      height: 80%; }
  .logos__divisor {
    background-color: #9bdc28;
    height: 90%;
    width: 1px;
    margin: 0 2em 10px 2em;
    box-shadow: 0 0 10px #9bdc28; }

.brands {
  position: relative;
  display: flex;
  justify-content: center;
  height: 100%;
  width: 100px;
  list-style: none;
  padding-left: 0; }
  .brands__actual {
    position: relative;
    height: 90%;
    cursor: pointer;
    transition: 0.5s;
    filter: invert(1) drop-shadow(0 0 4px black); }
  .brands__list {
    position: absolute;
    display: none;
    flex-direction: column;
    align-items: center;
    list-style: none;
    padding: .2em 0 0 0;
    width: 130%;
    top: 100%;
    border-radius: 0 0 10% 10%;
    overflow: hidden; }
    .brands__list__logos {
      display: flex;
      justify-content: center;
      position: relative;
      width: 100%;
      padding: 1em .8em .1em .8em; }
      .brands__list__logos img {
        transition: 0.5s;
        width: 100%;
        filter: invert(1) drop-shadow(0 0 4px black); }
      .brands__list__logos .brands-divisor {
        position: absolute;
        top: 0;
        width: 90%;
        height: 1px;
        background-color: grey; }
  .brands:hover .brands__list {
    display: flex; }

.compras {
  list-style: none;
  height: 100%;
  border-radius: 20%; }
  .compras__container {
    position: relative;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    width: 100%;
    height: 100%; }
    .compras__container img {
      cursor: pointer; }

.carrito {
  position: absolute;
  display: none;
  flex-direction: column;
  align-items: center;
  right: 0;
  top: 100%;
  z-index: 10;
  backdrop-filter: blur(5px);
  color: white;
  border: 1px solid white;
  border-radius: 20% 0 0 20%;
  background-color: rgba(0, 0, 0, 0.8);
  box-shadow: 0 0 20px black;
  padding: 20px;
  height: 500px;
  overflow-y: scroll;
  min-width: 300px; }
  .carrito::-webkit-scrollbar {
    width: 10px; }
  .carrito::-webkit-scrollbar-track {
    background-color: rgba(0, 0, 0, 0.8); }
  .carrito::-webkit-scrollbar-thumb {
    background-color: #1d1d1d;
    border-radius: 10px; }
    .carrito::-webkit-scrollbar-thumb:hover {
      background-color: #111; }
  .carrito::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    z-index: 9;
    border-radius: 20% 0 0 20%;
    background-color: rgba(0, 0, 0, 0.8);
    filter: blur(5px); }
  .carrito__vaciar {
    position: relative;
    z-index: 10;
    display: block;
    width: 80%;
    text-decoration: none;
    text-transform: uppercase;
    text-align: center;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    border: 1px solid #9bdc28;
    border-radius: 5px 5px 30px 30px;
    margin: 1em 0;
    padding: .5em 0;
    transition: 0.3s; }
    .carrito__vaciar:hover {
      color: grey; }

.lista-carrito {
  position: relative;
  z-index: 10; }
  .lista-carrito thead {
    display: table-header-group;
    width: 100%; }
  .lista-carrito th {
    padding: 12px 15px;
    margin: 0;
    text-align: center;
    border-bottom: 1px solid #9bdc28; }
  .lista-carrito td {
    padding: 12px 15px;
    text-align: center; }

.main {
  background-color: #131313; }

.banner {
  position: relative;
  height: calc(100vh - 1.5rem);
  z-index: 6; }
  .banner__bg {
    height: 100%;
    width: 100%;
    object-position: center;
    object-fit: cover; }
  .banner__text {
    position: absolute;
    top: 30%;
    right: 15%;
    width: 50%;
    font-family: 'Covered By Your Grace', 'Poppins', sans-serif;
    font-size: 100px;
    color: white;
    text-align: right;
    animation: flicker-red 1.5s infinite alternate; }

.divisor-bar {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 3rem;
  padding: 5px 0;
  margin-bottom: 2.5rem;
  border-top: 2px solid #9bdc28;
  border-bottom: 2px solid #9bdc28;
  z-index: 7;
  transition: 0.5s;
  background-color: rgba(0, 0, 0, 0.5);
  box-shadow: 0 0 10px #9bdc28; }
  .divisor-bar::before {
    content: '';
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: pink;
    background-image: url(../images/patterns/adidas-pattern2.jpg);
    background-size: 20%;
    background-position: center; }

.shoes-title {
  position: relative;
  top: 70%;
  color: white;
  text-align: center;
  font-family: 'Covered By Your Grace', 'Poppins', sans-serif;
  font-size: 90px;
  transition: 0.5s;
  margin-bottom: 2rem;
  animation: flicker-red 1.5s infinite alternate; }

.shoes-container {
  width: 80%;
  margin: 0 auto;
  position: relative;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 0.5fr);
  grid-gap: 20px;
  align-items: center;
  justify-items: center; }

.card {
  position: relative;
  z-index: 6;
  width: 320px;
  height: 450px;
  background: white;
  border-radius: 20px;
  overflow: hidden;
  box-shadow: 20px 20px 30px 0 rgba(0, 0, 0, 0.5), 4px 4px 4px 0 rgba(0, 0, 0, 0.15); }
  .card__circle {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    clip-path: circle(150px at 80% 20%);
    transition: 0.5s ease-in-out; }
  .card__imgBx {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    z-index: 6;
    width: 100%;
    height: 220px;
    transition: 0.5s; }
    .card__imgBx img {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%) rotate(-25deg);
      width: 270px;
      filter: drop-shadow(0 0 4px black); }
  .card__contentBx {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 100px;
    text-align: center;
    transition: 1s;
    z-index: 5; }
    .card__contentBx h2 {
      position: relative;
      font-weight: 600;
      letter-spacing: 1px;
      color: #000; }
    .card__contentBx .size, .card__contentBx .color, .card__contentBx .price {
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 8px 20px;
      transition: 0.5s;
      opacity: 0;
      visibility: hidden; }
    .card__contentBx .size span {
      width: 26px;
      height: 26px;
      text-align: center;
      line-height: 26px;
      font-size: 14px;
      display: inline-block;
      color: black;
      background: white;
      margin: 0 5px;
      border-radius: 4px;
      cursor: pointer;
      filter: drop-shadow(0 0 1px black);
      transition: background-color 0.5s ease-in-out; }
    .card__contentBx .color span {
      width: 20px;
      height: 20px;
      border-radius: 50%;
      margin: 0 5px;
      cursor: pointer;
      filter: drop-shadow(0 0 1px black); }
    .card__contentBx .size h3, .card__contentBx .color h3, .card__contentBx .price h3 {
      font-weight: 400;
      font-size: 14px;
      text-transform: uppercase;
      letter-spacing: 2px;
      margin-right: 10px; }
    .card__contentBx a {
      display: inline-block;
      padding: 10px 20px;
      background: #fff;
      border-radius: 5px;
      margin-top: 10px;
      text-decoration: none;
      text-transform: uppercase;
      font-weight: 600;
      color: #111;
      border: 1px solid #9bdc28;
      opacity: 0;
      transform: translateY(50px);
      transition: transform 0.5s, opacity 0.5s; }
  .card::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-image: url(../images/logos/adidas-logo.png);
    background-position: center;
    background-size: 20%;
    z-index: -1;
    filter: invert(0.9); }
  .card:hover .card__circle {
    clip-path: circle(300px at 80% -20%); }
  .card:hover .card__imgBx {
    top: 0%;
    transform: translateY(0%); }
  .card:hover .card__contentBx {
    height: 230px; }
  .card:hover .card__contentBx a {
    opacity: 1;
    transform: translateY(0px);
    transition-delay: 0.75s; }
  .card:hover .size {
    opacity: 1;
    visibility: visible;
    transition-delay: 0.5s; }
  .card:hover .color {
    opacity: 1;
    visibility: visible;
    transition-delay: 0.6s; }
  .card:hover .price {
    opacity: 1;
    visibility: visible;
    transition-delay: 0.7s; }

.active {
  border: 2px solid #9bdc28; }

